--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -225,6 +225,30 @@
             <trans-unit id="tx_cart.controller.order.action.statistic">
                 <source>Statistic of Orders</source>
             </trans-unit>
+            <trans-unit id="tx_cart.controller.order.action.show_cart.block-header.billing_address">
+                <source>Billing Address</source>
+            </trans-unit>
+            <trans-unit id="tx_cart.controller.order.action.show_cart.block-header.shipping_address">
+                <source>Shipping Address</source>
+            </trans-unit>
+            <trans-unit id="tx_cart.controller.order.action.show_cart.block-header.shipping_method">
+                <source>Shipping Method</source>
+            </trans-unit>
+            <trans-unit id="tx_cart.controller.order.action.show_cart.block-header.payment_method">
+                <source>Payment Method</source>
+            </trans-unit>
+            <trans-unit id="tx_cart.controller.order.action.show_cart.block-header.coupons">
+                <source>Coupons</source>
+            </trans-unit>
+            <trans-unit id="tx_cart.controller.order.action.show_cart.block-header.order_overview">
+                <source>Order Overvier</source>
+            </trans-unit>
+            <trans-unit id="tx_cart.controller.order.action.show_cart.coupons.not_available">
+                <source>No coupon code was entered.</source>
+            </trans-unit>
+            <trans-unit id="tx_cart.controller.order.action.order_cart.thank_you">
+                <source>Thank you for your order.</source>
+            </trans-unit>
 
             <trans-unit id="tx_cart_domain_model_order_item">
                 <source>Order</source>
@@ -588,6 +612,16 @@
             </trans-unit>
             <trans-unit id="tx_cart_domain_model_product.stock">
                 <source>Stock</source>
+            </trans-unit>
+
+            <trans-unit id="tx_cart_domain_model_product_coupon">
+                <source>Coupon</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_coupon.code">
+                <source>Coupon Code</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_coupon.code.not_useable">
+                <source>Coupon Code is not useable.</source>
             </trans-unit>
 
             <trans-unit id="tx_cart_domain_model_productvariantset">
