--- a/Resources/Private/Language/de.locallang_db.xlf
+++ b/Resources/Private/Language/de.locallang_db.xlf
@@ -258,6 +258,26 @@
                 <source>Product</source>
                 <target>Produkt</target>
             </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_product.product_type">
+                <source>Type</source>
+                <target>Typ</target>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_product.product_type.simple">
+                <source>simple</source>
+                <target>einfach</target>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_product.product_type.configurable">
+                <source>configurable</source>
+                <target>konfigurierbar</target>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_product.product_type.virtual">
+                <source>virtual</source>
+                <target>virtuell</target>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_product.product_type.downloadable">
+                <source>downloadable</source>
+                <target>herunterladbar</target>
+            </trans-unit>
             <trans-unit id="tx_cart_domain_model_order_product.sku">
                 <source>SKU</source>
                 <target>Artikelnummer</target>
@@ -747,7 +767,28 @@
             </trans-unit>
   
             <trans-unit id="tx_cart_domain_model_product_product">
+                <source>Product</source>
                 <target>Produkt</target>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_product.product_type">
+                <source>Type</source>
+                <target>Typ</target>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_product.product_type.simple">
+                <source>simple</source>
+                <target>einfach</target>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_product.product_type.configurable">
+                <source>configurable</source>
+                <target>konfigurierbar</target>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_product.product_type.virtual">
+                <source>virtual</source>
+                <target>virtuell</target>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_product.product_type.downloadable">
+                <source>downloadable</source>
+                <target>herunterladbar</target>
             </trans-unit>
             <trans-unit id="tx_cart_domain_model_product_product.sku">
                 <source>SKU</source>
