--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -206,6 +206,21 @@
             <trans-unit id="tx_cart_domain_model_order_product">
                 <source>Product</source>
             </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_product.product_type">
+                <source>Type</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_product.product_type.simple">
+                <source>simple</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_product.product_type.configurable">
+                <source>configurable</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_product.product_type.virtual">
+                <source>virtual</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_product.product_type.downloadable">
+                <source>downloadable</source>
+            </trans-unit>
             <trans-unit id="tx_cart_domain_model_order_product.sku">
                 <source>SKU</source>
             </trans-unit>
@@ -593,6 +608,21 @@
 
             <trans-unit id="tx_cart_domain_model_product_product">
                 <source>Product</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_product.product_type">
+                <source>Type</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_product.product_type.simple">
+                <source>simple</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_product.product_type.configurable">
+                <source>configurable</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_product.product_type.virtual">
+                <source>virtual</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_product_product.product_type.downloadable">
+                <source>downloadable</source>
             </trans-unit>
             <trans-unit id="tx_cart_domain_model_product_product.sku">
                 <source>SKU</source>
