[TASK] #1195 - add some documentation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+0.15.1
+    2016-07-17
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #1195: add some documentation
+
 0.15.0
     2016-07-17
     Daniel Lorenz <daniel.lorenz@extco.de>
