--- a/Resources/Private/Language/locallang_db.xlf
+++ b/Resources/Private/Language/locallang_db.xlf
@@ -146,8 +146,8 @@
             <trans-unit id="tx_cart_domain_model_order_item.products">
                 <source>Products</source>
             </trans-unit>
-            <trans-unit id="tx_cart_domain_model_order_item.coupons">
-                <source>Coupons</source>
+            <trans-unit id="tx_cart_domain_model_order_item.discounts">
+                <source>Discounts</source>
             </trans-unit>
             <trans-unit id="tx_cart_domain_model_order_item.shipping">
                 <source>Shipping</source>
@@ -258,31 +258,34 @@
                 <source>Product Additional</source>
             </trans-unit>
 
-            <trans-unit id="tx_cart_domain_model_order_coupon">
-                <source>Coupon</source>
-            </trans-unit>
-            <trans-unit id="tx_cart_domain_model_order_coupon.title">
-                <source>Title</source>
-            </trans-unit>
-            <trans-unit id="tx_cart_domain_model_order_coupon.code">
-                <source>Code</source>
-            </trans-unit>
-            <trans-unit id="tx_cart_domain_model_order_coupon.discount">
+            <trans-unit id="tx_cart_domain_model_order_discount">
                 <source>Discount</source>
             </trans-unit>
-            <trans-unit id="tx_cart_domain_model_order_coupon.tax_class_id">
+            <trans-unit id="tx_cart_domain_model_order_discount.title">
+                <source>Title</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_discount.code">
+                <source>Code</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_discount.gross">
+                <source>Discount (gross)</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_discount.net">
+                <source>Discount (net)</source>
+            </trans-unit>
+            <trans-unit id="tx_cart_domain_model_order_discount.tax_class_id">
                 <source>Tax Class</source>
             </trans-unit>
-            <trans-unit id="tx_cart_domain_model_order_coupon.tax_class_id.1">
+            <trans-unit id="tx_cart_domain_model_order_discount.tax_class_id.1">
                 <source>normal</source>
             </trans-unit>
-            <trans-unit id="tx_cart_domain_model_order_coupon.tax_class_id.2">
+            <trans-unit id="tx_cart_domain_model_order_discount.tax_class_id.2">
                 <source>reduced</source>
             </trans-unit>
-            <trans-unit id="tx_cart_domain_model_order_coupon.tax_class_id.3">
+            <trans-unit id="tx_cart_domain_model_order_discount.tax_class_id.3">
                 <source>free</source>
             </trans-unit>
-            <trans-unit id="tx_cart_domain_model_order_coupon.tax">
+            <trans-unit id="tx_cart_domain_model_order_discount.tax">
                 <source>Tax</source>
             </trans-unit>
 
