--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+0.16.1
+    2016-07-17
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #1195: add some documentation
+
 0.16.0
     2016-07-17
     Daniel Lorenz <daniel.lorenz@extco.de>
