[TASK] #1196 - show product correct single price and discount in module order

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+0.17.0
+    2016-07-17
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #1196: show product correct single price and discount in module order
+
 0.16.1
     2016-07-17
     Daniel Lorenz <daniel.lorenz@extco.de>
