--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+0.17.1
+    2016-07-17
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * BUGFIX #1198: update ext_tables.sql for TYPO3 6.2
+
 0.17.0
     2016-07-17
     Daniel Lorenz <daniel.lorenz@extco.de>
