--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,17 @@
+0.18.0
+    2016-07-18
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #1200: allow to add products with feVariants through ajax request
+
 0.17.2
-    2016-07-17
+    2016-07-18
     Daniel Lorenz <daniel.lorenz@extco.de>
 
     * BUGFIX #1199: resolve root path before setLayoutRootPaths and setPartialRootPaths in TYPO3 6.2
 
 0.17.1
-    2016-07-17
+    2016-07-18
     Daniel Lorenz <daniel.lorenz@extco.de>
 
     * BUGFIX #1198: update ext_tables.sql for TYPO3 6.2
