--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+0.19.0
+    2016-07-18
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #1201: refactor TypoScript configuration for mail
+
 0.18.0
     2016-07-18
     Daniel Lorenz <daniel.lorenz@extco.de>
