--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+0.19.1
+    2016-07-18
+    Daniel Lorenz <daniel.lorenz@extco.de>
+
+    * TASK #1195: add some documentation
+
 0.19.0
     2016-07-18
     Daniel Lorenz <daniel.lorenz@extco.de>
